Use galaxy_tags instead of categories

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -186,7 +186,7 @@ galaxy_info:
   # Below are all categories currently available. Just as with
   # the platforms above, uncomment those that apply to your role.
   #
-  categories:
+  galaxy_tags:
   #- cloud
   #- cloud:ec2
   #- cloud:gce
@@ -199,6 +199,10 @@ galaxy_info:
   #- monitoring
   #- networking
   - packaging
+  - docker
+  - jenkins
+  - ci
+  - deploy
   #- system
   #- web
 dependencies: []
