--- a/tasks/docker/install.yml
+++ b/tasks/docker/install.yml
@@ -4,19 +4,23 @@
   file:
     path: "{{ jenkins_home }}"
     mode: 0777
+    owner: "{{ jenkins_config_owner }}"
+    group: "{{ jenkins_config_group }}"
     recurse: yes
     state: directory
 
 - name: Container is running
-  docker:
+  docker_container:
     name: "{{ jenkins_docker_container_name }}"
     image: "jenkins:{{ jenkins_version }}"
-    ports: "{{ jenkins_port }}:8080"
+    published_ports:
+      - "{{ jenkins_port }}:8080"
     volumes:
       - "{{ jenkins_home }}:/var/jenkins_home"
     env:
       JAVA_OPTS: "{{ jenkins_java_opts }}"
   register: container_result
 
-- pause: seconds=45
+- pause:
+    seconds: 45
   when: container_result|changed
