--- a/tasks/docker/restart.yml
+++ b/tasks/docker/restart.yml
@@ -1,21 +1,14 @@
 ---
 
-  # Workaround to fix the bug in restarting containers from Ansible 2
-
-- name: Container is stopped
-  docker:
-    name: "{{ jenkins_docker_container_name }}"
-    image: "jenkins:{{ jenkins_version }}"
-    state: stopped
-
 - name: Container is running
-  docker:
+  docker_container:
     name: "{{ jenkins_docker_container_name }}"
     image: "jenkins:{{ jenkins_version }}"
-    ports: "{{ jenkins_port }}:8080"
+    published_ports: "{{ jenkins_port }}:8080"
     volumes:
       - "{{ jenkins_home }}:/var/jenkins_home"
     env:
       JAVA_OPTS: "{{ jenkins_java_opts }}"
+    restart: yes
 
 - pause: seconds=15
