--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
 
-jenkins_version: "2.19.2" # The exact version of jenkins to deploy
+jenkins_version: "2.19.3" # The exact version of jenkins to deploy
 jenkins_url: "http://127.0.0.1" # The url that Jenkins will be accessible on
 jenkins_port: "8080" # The port that Jenkins will listen on
 jenkins_home: /data/jenkins # The directory on the server where the Jenkins configs will live
@@ -8,9 +8,16 @@ jenkins_home: /data/jenkins # The directory on the server where the Jenkins conf
 # If you need to override any java options then do that here.
 jenkins_java_opts: "-Djenkins.install.runSetupWizard=false"
 
+# Configuration files owner and group
+jenkins_config_owner: "ubuntu"
+jenkins_config_group: "ubuntu"
+
 # The locations of the configuration files for jenkins
 jenkins_source_dir_configs: "{{ playbook_dir }}/jenkins-configs"
 jenkins_source_dir_jobs: "{{ jenkins_source_dir_configs }}/jobs"
+
+jenkins_source_config_xml: "{{ jenkins_source_dir_configs }}/config.xml"
+jenkins_source_credentials_xml: "{{ jenkins_source_dir_configs }}/credentials.xml"
 
 # The names of the jobs (an xml must exist in jenkins_source_dir_jobs with these names)
 jenkins_jobs: []
@@ -25,6 +32,8 @@ jenkins_plugins:
   - docker-workflow
   - template-project
   - ec2
+
+jenkins_custom_plugins: []
 
 # Configs specific to the "docker" method of running jenkins
 jenkins_docker_container_name: jenkins
