--- a/tasks/configure-jenkins.yml
+++ b/tasks/configure-jenkins.yml
@@ -4,36 +4,58 @@
   template:
     src: "{{ jenkins_source_config_xml }}"
     dest: "{{ jenkins_home }}/config.xml"
-    mode: 0770
+    mode: 0644
     owner: "{{ jenkins_config_owner }}"
     group: "{{ jenkins_config_group }}"
 
-- name: Configuration file is up to date (credentials.xml)
+- name: Confige userdata
   template:
-    src: "{{ jenkins_source_credentials_xml }}"
-    dest: "{{ jenkins_home }}/credentials.xml"
-    mode: 0770
+    src: "{{ jenkins_source_dir_configs }}/{{ item.src }}"
+    dest: "{{ jenkins_home }}/{{ item.dest }}"
+    mode: 0644
     owner: "{{ jenkins_config_owner }}"
     group: "{{ jenkins_config_group }}"
+  when: jenkins_include_userdata
+  with_items: "{{ jenkins_userdata }}"
+
+- name: secrets dir is up to date
+  copy:
+    src: "{{ jenkins_source_secrets }}"
+    dest: "{{ jenkins_home }}/secrets"
+    owner: "{{ jenkins_config_owner }}"
+    group: "{{ jenkins_config_group }}"
+  when: jenkins_include_secrets
 
 - name: get token for jenkins api
   uri:
-    url: "{{ jenkins_url }}:{{ jenkins_port }}/crumbIssuer/api/xml?xpath=concat(//crumbRequestField,\":\",//crumb)"
+    url: '{{ jenkins_url }}:{{ jenkins_port }}/crumbIssuer/api/xml?xpath=concat(//crumbRequestField,":",//crumb)'
+    return_content: yes
+    status_code: 200,404
   register: jenkins_token
 
-- debug:
-    msg: "{{ jenkins_token }}"
-
-- name: Plugins are installed
+- name: Install plugins if crumb is enabled
   uri:
     url: "{{ jenkins_url }}:{{ jenkins_port }}/pluginManager/installNecessaryPlugins"
     method: POST
     headers:
       Content-Type: "text/xml"
-      "{{ jenkins_token.stdout }}"
+      Jenkins-Crumb: "{{ jenkins_token.content.split(':')[1] | default('noCrumb') }}"
     body: "<jenkins><install plugin=\"{{ item }}@latest\" /></jenkins>"
     status_code: 200,302
   with_items: "{{ jenkins_plugins }}"
+  when: jenkins_token.status == 200
+
+- name: Install plugins if crumb is disabled
+  uri:
+    url: "{{ jenkins_url }}:{{ jenkins_port }}/pluginManager/installNecessaryPlugins"
+    method: POST
+    headers:
+      Content-Type: "text/xml"
+    body: "<jenkins><install plugin=\"{{ item }}@latest\" /></jenkins>"
+    status_code: 200,302
+  with_items: "{{ jenkins_plugins }}"
+  when: jenkins_token.status == 404
+
 
 - name: Custom plugins are installed
   copy:
@@ -46,5 +68,5 @@
   when: jenkins_custom_plugins is defined
 
 - wait_for:
-    path: "{{jenkins_home }}/plugins/{{ item }}"
+    path: "{{ jenkins_home }}/plugins/{{ item }}.jpi"
   with_items: "{{ jenkins_plugins }}"
