--- a/tasks/configure-jobs.yml
+++ b/tasks/configure-jobs.yml
@@ -14,9 +14,26 @@
     mode: 0777
   with_items: "{{ jenkins_jobs }}"
 
-- name: Jenkins is reloaded
+- name: get token for jenkins api
+  uri:
+    url: '{{ jenkins_url }}:{{ jenkins_port }}/crumbIssuer/api/xml?xpath=concat(//crumbRequestField,":",//crumb)'
+    return_content: yes
+  register: jenkins_token
+
+- name: Reload Jenkins if crumb is enabled
+  uri:
+    url: "{{ jenkins_url }}:{{ jenkins_port }}/reload"
+    method: POST
+    status_code: 200,302
+    headers:
+      Jenkins-Crumb: "{{ jenkins_token.content.split(':')[1] }}"
+  ignore_errors: yes
+  when: jenkins_token.status == 200
+
+- name: Reload Jenkins if crumb is disabled
   uri:
     url: "{{ jenkins_url }}:{{ jenkins_port }}/reload"
     method: POST
     status_code: 200,302
   ignore_errors: yes
+  when: jenkins_token.status == 404
