--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -45,4 +45,9 @@ jenkins_plugins:
 jenkins_custom_plugins: []
 
 # Configs specific to the "docker" method of running jenkins
+# The name of the jenkins container
 jenkins_docker_container_name: jenkins
+
+# Default, if true, the port will be exposed on the host (using "port")
+# If set to false, the port will only be exposed to other containers (using "expose")
+jenkins_docker_expose_port: true
