--- a/tests/test.yml
+++ b/tests/test.yml
@@ -1,8 +1,8 @@
 ---
 - hosts: all
 
-#  vars:
-#    nginx_use_ppa: true
+  vars:
+    jenkins_install_via: "docker"
 
   roles:
     - role_under_test
