Create intermediate dirs for custom files
If the user specifies a custom file which lives in a subdirectory of
JENKINS_HOME then unfortunately the "Configure custom files" task will
fail because the template module will not create the parent directory
for the destination file.

--- a/tasks/configure-jenkins.yml
+++ b/tasks/configure-jenkins.yml
@@ -8,6 +8,16 @@
     owner: "{{ jenkins_config_owner }}"
     group: "{{ jenkins_config_group }}"
 
+- name: Create intermediate dirs for custom files
+  file:
+    path: "{{ jenkins_home }}/{{ item.dest | dirname }}"
+    owner: "{{ jenkins_config_owner }}"
+    group: "{{ jenkins_config_group }}"
+    mode: 0755
+    state: directory
+  when: jenkins_include_custom_files
+  with_items: "{{ jenkins_custom_files }}"
+
 - name: Configure custom files
   template:
     src: "{{ jenkins_source_dir_configs }}/{{ item.src }}"
