--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -5,6 +5,7 @@
 - include: "configure-jenkins.yml"
 
 - include: "{{ jenkins_install_via }}/restart.yml"
+- include: "configure-plugins.yml"
 
 - include: "configure-jobs.yml"
 - include: "{{ jenkins_after_config_jobs_file | default('empty.yml') }}"
