Stop Jenkins service before changing config data
After installation, Jenkins must be started up so that it can create
the files and directories that it needs to run. However, Jenkins
should be stopped before changing any configuration data, since some
of the files generated by Jenkins (for example, hudson.util.Secret)
are also mapped in memory and flushed to disk when Jenknis shuts down,
which overwrites any custom user data in the process.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,6 +2,9 @@
 
 - include: "{{ jenkins_install_via }}/install.yml"
 
+# Jenkins should not be running while we change the configuration
+# data, otherwise some files might be overwritten when it restarts
+- include: "{{ jenkins_install_via }}/stop.yml"
 - include: "configure-jenkins.yml"
 
 - include: "{{ jenkins_install_via }}/restart.yml"
