--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,9 +2,13 @@
 
 - include: "{{ jenkins_install_via }}/install.yml"
 
+# Jenkins should not be running while we change the configuration
+# data, otherwise some files might be overwritten when it restarts
+- include: "{{ jenkins_install_via }}/stop.yml"
 - include: "configure-jenkins.yml"
 
 - include: "{{ jenkins_install_via }}/restart.yml"
+- include: "configure-plugins.yml"
 
 - include: "configure-jobs.yml"
 - include: "{{ jenkins_after_config_jobs_file | default('empty.yml') }}"
