Create Jenkins home directory when creating user
Note: This change means that the Jenkins home directory will have a
mode of 0755 instead of 0777, as it was before.

--- a/tasks/apt/install.yml
+++ b/tasks/apt/install.yml
@@ -9,15 +9,8 @@
   user:
     name: "{{ jenkins_config_owner }}"
     group: "{{ jenkins_config_group }}"
+    home: "{{ jenkins_home }}"
     state: present
-
-- name: Ensure jenkins home dir is created
-  file:
-    path: "{{ jenkins_home }}"
-    mode: 0777
-    owner: "{{ jenkins_config_owner }}"
-    group: "{{ jenkins_config_group }}"
-    state: directory
 
 - name: Install apt PPA dependencies
   apt:
