Use jenkins_version when installing via apt
Note: The 'force' option is necessary to allow for easily downgrading
the Jenkins version.

--- a/tasks/apt/install.yml
+++ b/tasks/apt/install.yml
@@ -62,7 +62,8 @@
 
 - name: Install Jenkins binary package
   apt:
-    name: jenkins
+    name: "jenkins={{ jenkins_version }}"
+    force: yes
     update_cache: yes
 
 - name: Set JENKINS_HOME
