Configure jenkins_port for apt installations

--- a/tasks/apt/install.yml
+++ b/tasks/apt/install.yml
@@ -72,6 +72,12 @@
     line: "JENKINS_HOME={{ jenkins_home }}"
     regexp: '^JENKINS_HOME='
 
+- name: Set Jenkins port
+  lineinfile:
+    dest: /etc/default/jenkins
+    regexp: '^HTTP_PORT='
+    line: "HTTP_PORT={{ jenkins_port }}"
+
 - name: Set Jenkins command line options
   lineinfile:
     dest: /etc/default/jenkins
