Configure Jenkins location and admin email
This commit creates jenkins.model.JenkinsLocationConfiguration.xml,
which is automatically generated by Jenkins but only after one
manually saves the system configuration. Until this file is generated,
several Jenkins-related environment variables use
"http://unconfigured-jenkins-location" as the server URL.

This change also introduces the jenkins_admin variable for the
administrator's email address, since that is contained in the same XML
file.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,6 +4,7 @@ jenkins_version: "2.32.3" # The exact version of jenkins to deploy
 jenkins_url: "http://127.0.0.1" # The url that Jenkins will be accessible on
 jenkins_port: "8080" # The port that Jenkins will listen on
 jenkins_home: /data/jenkins # The directory on the server where the Jenkins configs will live
+jenkins_admin: "admin@example.com" # The admininstrator email address for the Jenkins server
 
 # If you need to override any java options then do that here.
 jenkins_java_opts: "-Djenkins.install.runSetupWizard=false"
