--- a/tasks/yum/start.yml
+++ b/tasks/yum/start.yml
@@ -3,7 +3,7 @@
   service: name="jenkins" state="started"
 - name: "Wait for Jenkins to come up"
   uri:
-    url: "http://localhost:{{ jenkins_port }}"
+    url: "http://{{ jenkins_url }}:{{ jenkins_port }}"
     status_code: 200
   register: result
   until: result.status == 200
