--- a/tasks/yum/install.yml
+++ b/tasks/yum/install.yml
@@ -1,24 +1,32 @@
 - name: "Make sure Jenkins is stopped"
   service: name="jenkins" state="stopped"
   ignore_errors: yes
+
 - name: "Create Jenkins group"
   group:
     name: "{{ jenkins_config_group }}"
     state: present
+
 - name: "Create Jenkins user"
   user: name="{{ jenkins_config_owner }}" groups="{{ jenkins_config_group }}" state="present"
-- name: "Install Java"
+
+- name: "Install Java and GIT"
   yum: name="java" state="present"
-- name: "Install git"
-  yum: name="git" state="present"
+  with_items:
+    - java
+    - git
+
 - name: "Add Jenkins repository"
   get_url: url="http://pkg.jenkins-ci.org/redhat/jenkins.repo" dest="/etc/yum.repos.d/jenkins.repo"
+
 - name: "Import Jenkins key"
   command: "rpm --import https://jenkins-ci.org/redhat/jenkins-ci.org.key"
+
 - name: "Install Jenkins"
   yum:
     name: jenkins
     state: present
+
 - name: Set JENKINS_HOME
   lineinfile:
     create: "yes"
@@ -26,6 +34,7 @@
     line: "JENKINS_HOME={{ jenkins_home }}"
     regexp: '^JENKINS_HOME='
     state: "present"
+
 - name: "Set Jenkins command line options"
   lineinfile:
     dest: /etc/default/jenkins
