--- a/tasks/docker/install.yml
+++ b/tasks/docker/install.yml
@@ -11,7 +11,7 @@
 - name: Container is running (with ingress port)
   docker_container:
     name: "{{ jenkins_docker_container_name }}"
-    image: "jenkins:{{ jenkins_version }}"
+    image: "{{ jenkins_docker_image }}:{{ jenkins_version }}"
     published_ports:
       - "{{ jenkins_port }}:8080"
     volumes:
@@ -24,7 +24,7 @@
 - name: Container is running (without ingress port)
   docker_container:
     name: "{{ jenkins_docker_container_name }}"
-    image: "jenkins:{{ jenkins_version }}"
+    image: "{{ jenkins_docker_image }}:{{ jenkins_version }}"
     expose: "8080"
     volumes:
       - "{{ jenkins_home }}:/var/jenkins_home"
