Cleanup vars and README

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,6 @@
 ---
 
 jenkins_version: "2.73.1" # The exact version of jenkins to deploy
-jenkins_docker_image: "jenkins/jenkins" # The docker hub image name
 
 jenkins_url: "http://127.0.0.1" # The url that Jenkins will be accessible on
 jenkins_port: "8080" # The port that Jenkins will listen on
@@ -47,6 +46,13 @@ jenkins_plugins:
 # List of sources of custom jenkins plugins to install
 jenkins_custom_plugins: []
 
+###################################################
+# Docker vars: apply to deploying via docker only #
+###################################################
+
+# The docker hub image name
+jenkins_docker_image: "jenkins/jenkins"
+
 # Configs specific to the "docker" method of running jenkins
 # The name of the jenkins container
 jenkins_docker_container_name: jenkins
@@ -54,3 +60,17 @@ jenkins_docker_container_name: jenkins
 # Default, if true, the port will be exposed on the host (using "port")
 # If set to false, the port will only be exposed to other containers (using "expose")
 jenkins_docker_expose_port: true
+
+
+#############################################
+# Apt vars: apply to deploying via apt only #
+#############################################
+
+# Packages which are to be installed on the jenkins instance
+jenkins_apt_packages:
+  - openjdk-8-jdk
+
+# Java version to use. Note that JDK 8 is required for Jenkins
+# 2.54 or greater.
+jenkins_java_version: "java-1.8.0-openjdk-amd64"
+
