--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -9,7 +9,9 @@
 
 - include: "{{ jenkins_install_via }}/restart.yml"
 - include: "wait-for-start.yml"
+- include: "set-quiet-mode.yml"
 - include: "configure-plugins.yml"
 
 - include: "configure-jobs.yml"
+- include: "cancel-quiet-mode.yml"
 - include: "{{ jenkins_after_config_jobs_file | default('empty.yml') }}"
