--- a/tasks/set-quiet-mode.yml
+++ b/tasks/set-quiet-mode.yml
@@ -1,10 +1,5 @@
 ---
-- name: Get token for Jenkins API
-  uri:
-    url: '{{ jenkins_url }}:{{ jenkins_port }}/crumbIssuer/api/xml?xpath=concat(//crumbRequestField,":",//crumb)'
-    return_content: yes
-    status_code: 200,404
-  register: jenkins_token
+- include_tasks: "get-crumb.yml"
 
 - name: Set quiet mode
   uri:
