Cleanup: don't loop when installing apt packages
The apt module has supported a list of packages for the `name`
attribute since at least Ansible 2.5 (which is the oldest online
documentation I could find). Using this syntax is slighly more
performant, and more importantly, fixes a nag about the old syntax
being deprecated in Ansible 2.11.

--- a/tasks/apt/install.yml
+++ b/tasks/apt/install.yml
@@ -39,8 +39,9 @@
     mode: 0644
 
 - name: Install apt packages
-  action: apt name={{ item }} state=present
-  with_items: "{{ jenkins_apt_packages }}"
+  apt:
+    name: "{{ jenkins_apt_packages }}"
+    state: present
 
 - name: Set default Java version
   shell: /usr/sbin/update-java-alternatives -s "{{ jenkins_java_version }}"
