Move custom file tasks to own file
Custom files should be handled after plugin installation. In case the
user has any custom files related to plugins, those plugins should be
present on Jenkins first, otherwise there is a risk that they will
promptly overwrite these files with default values.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,6 +4,8 @@
 - include: "configure-jenkins.yml"
 - include: "configure-plugins.yml"
 
+- include: "configure-files.yml"
+  when: jenkins_include_custom_files
 - include: "configure-jobs.yml"
 - include: "cancel-quiet-mode.yml"
 - include: "{{ jenkins_after_config_jobs_file | default('empty.yml') }}"
