Start Jenkins after all tasks are complete
Of course, this must also be done before cancelling quiet mode.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -9,4 +9,5 @@
 - include: "configure-jobs.yml"
 - include: "{{ jenkins_after_config_jobs_file }}"
   when: jenkins_after_config_jobs_file
+- include: "start.yml"
 - include: "cancel-quiet-mode.yml"
