Include jenkins_after_config_jobs_file if defined
This commit defines a default value for
jenkins_after_config_jobs_file, as well as providing a brief
description of the variable. This makes `empty.yml` obsolete.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,5 +7,6 @@
 - include: "configure-files.yml"
   when: jenkins_include_custom_files
 - include: "configure-jobs.yml"
-- include: "{{ jenkins_after_config_jobs_file | default('empty.yml') }}"
+- include: "{{ jenkins_after_config_jobs_file }}"
+  when: jenkins_after_config_jobs_file
 - include: "cancel-quiet-mode.yml"
