Improve service lifecycle (#39)
* Add task for starting Jenkins

The introduction of this task will assist in eliminating both the
restart.yml and wait-for-start.yml tasks. This task handles both
starting the Jenkins service and waiting for it to complete starting
(formerly handled by wait-for-start.yml). In this manner, we can
achieve a more fine-grained control of the Jenkins service status.

* Put Jenkins in correct state in task files

Previous to this change, main.yml attempted to manage Jenkins' service
state before including any of the other task files. This got a bit
messy and also led to some cases of unnecessary service restarts.

Now, each task file will place Jenkins in the desired state before
attempting to do any work. This guarantees that no matter what state
the service is in when a task finishes, the next task will execute
without problems. This also makes it possible for playbooks including
this role to be able to use `include_tasks`/`tasks_from` from this
role without needing to worry about putting the Jenkins service in the
correct state beforehand.

* Don't restart Jenkins at end of apt install task

Any tasks run after this one should be responsible for putting the
Jenkins service in the state they need. Also, the next task stops
Jenkins immediately (though this task shouldn't need to care about
that), so it's a bit wasteful to restart the service just to see it
stopped again a few seconds later.

* Move custom file tasks to own file

Custom files should be handled after plugin installation. In case the
user has any custom files related to plugins, those plugins should be
present on Jenkins first, otherwise there is a risk that they will
promptly overwrite these files with default values.

* Take Jenkins out of quiet mode after tasks finish

In case the user does something potentially disruptive in a custom
jenkins_after_config_jobs_file task, we should make sure that Jenkins
isn't accepting new builds j

--- a/tasks/configure-jobs.yml
+++ b/tasks/configure-jobs.yml
@@ -1,4 +1,7 @@
 ---
+# First, make sure that Jenkins is stopped before attempting to copy any job
+# configuration files.
+- include_tasks: "{{ jenkins_install_via }}/stop.yml"
 
 - name: Job directories are present
   file:
@@ -13,23 +16,3 @@
     dest: "{{ jenkins_home }}/jobs/{{ item }}/config.xml"
     mode: 0777
   with_items: "{{ jenkins_jobs }}"
-
-- include_tasks: "get-crumb.yml"
-
-- name: Reload Jenkins if crumb is enabled
-  uri:
-    url: "{{ jenkins_url }}:{{ jenkins_port }}/reload"
-    method: POST
-    status_code: 200,302
-    headers:
-      Jenkins-Crumb: "{{ jenkins_token.content.split(':')[1] }}"
-  ignore_errors: yes
-  when: jenkins_token.status == 200
-
-- name: Reload Jenkins if crumb is disabled
-  uri:
-    url: "{{ jenkins_url }}:{{ jenkins_port }}/reload"
-    method: POST
-    status_code: 200,302
-  ignore_errors: yes
-  when: jenkins_token.status == 404
