--- a/tasks/configure-jenkins.yml
+++ b/tasks/configure-jenkins.yml
@@ -1,4 +1,7 @@
 ---
+# Jenkins should not be running while we write configuration files, otherwise
+# otherwise some data might be overwritten when it restarts.
+- include_tasks: "{{ jenkins_install_via }}/stop.yml"
 
 - name: Configuration file is up to date (config.xml)
   template:
@@ -15,26 +18,6 @@
     mode: 0644
     owner: "{{ jenkins_config_owner }}"
     group: "{{ jenkins_config_group }}"
-
-- name: Create intermediate dirs for custom files
-  file:
-    path: "{{ jenkins_home }}/{{ item.dest | dirname }}"
-    owner: "{{ jenkins_config_owner }}"
-    group: "{{ jenkins_config_group }}"
-    mode: 0755
-    state: directory
-  when: jenkins_include_custom_files
-  with_items: "{{ jenkins_custom_files }}"
-
-- name: Configure custom files
-  template:
-    src: "{{ jenkins_source_dir_configs }}/{{ item.src }}"
-    dest: "{{ jenkins_home }}/{{ item.dest }}"
-    mode: 0644
-    owner: "{{ jenkins_config_owner }}"
-    group: "{{ jenkins_config_group }}"
-  when: jenkins_include_custom_files
-  with_items: "{{ jenkins_custom_files }}"
 
 - name: secrets dir is up to date
   copy:
