--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,17 +1,18 @@
 ---
-
 - include: "{{ jenkins_install_via }}/install.yml"
 
-# Jenkins should not be running while we change the configuration
-# data, otherwise some files might be overwritten when it restarts
-- include: "{{ jenkins_install_via }}/stop.yml"
 - include: "configure-jenkins.yml"
 
-- include: "{{ jenkins_install_via }}/restart.yml"
-- include: "wait-for-start.yml"
-- include: "set-quiet-mode.yml"
 - include: "configure-plugins.yml"
 
+- include: "configure-files.yml"
+  when: jenkins_include_custom_files
+
 - include: "configure-jobs.yml"
+
+- include: "{{ jenkins_after_config_jobs_file }}"
+  when: jenkins_after_config_jobs_file
+
+- include: "start.yml"
+
 - include: "cancel-quiet-mode.yml"
-- include: "{{ jenkins_after_config_jobs_file | default('empty.yml') }}"
