Some minor cleanups (#37)
* Cleanup: don't loop when installing apt packages

The apt module has supported a list of packages for the `name`
attribute since at least Ansible 2.5 (which is the oldest online
documentation I could find). Using this syntax is slighly more
performant, and more importantly, fixes a nag about the old syntax
being deprecated in Ansible 2.11.

* Cleanup: improve task readability

This also makes the tasks fit on <80 character lines.

* Cleanup: add `---` header to YAML file

* Cleanup: name tasks

This triggered violation E502 from ansible-lint.

* Cleanup: remove extra newlines

* Cleanup: remove trailing whitespace

This triggered violation E201 from ansible-lint.

--- a/tasks/yum/install.yml
+++ b/tasks/yum/install.yml
@@ -1,3 +1,4 @@
+---
 - name: "Make sure Jenkins is stopped"
   service: name="jenkins" state="stopped"
   ignore_errors: yes
@@ -8,7 +9,10 @@
     state: present
 
 - name: "Create Jenkins user"
-  user: name="{{ jenkins_config_owner }}" groups="{{ jenkins_config_group }}" state="present"
+  user:
+    name: "{{ jenkins_config_owner }}"
+    groups: "{{ jenkins_config_group }}"
+    state: present
 
 - name: "Install Java and GIT"
   yum: name="java" state="present"
@@ -17,7 +21,9 @@
     - git
 
 - name: "Add Jenkins repository"
-  get_url: url="http://pkg.jenkins-ci.org/redhat/jenkins.repo" dest="/etc/yum.repos.d/jenkins.repo"
+  get_url:
+    url: "http://pkg.jenkins-ci.org/redhat/jenkins.repo"
+    dest: "/etc/yum.repos.d/jenkins.repo"
 
 - name: "Import Jenkins key"
   command: "rpm --import https://jenkins-ci.org/redhat/jenkins-ci.org.key"
