--- a/tasks/configure-plugins.yml
+++ b/tasks/configure-plugins.yml
@@ -30,7 +30,6 @@
   with_items: "{{ jenkins_plugins }}"
   when: jenkins_token.status == 404
 
-
 - name: Custom plugins are installed
   copy:
     src: "{{ item }}"
@@ -41,6 +40,7 @@
   with_items: "{{ jenkins_custom_plugins }}"
   when: jenkins_custom_plugins is defined
 
-- wait_for:
+- name: Wait for plugins to finish installing
+  wait_for:
     path: "{{ jenkins_home }}/plugins/{{ item }}.jpi"
   with_items: "{{ jenkins_plugins }}"
