Add names to all tasks
This fixes an ansible-lint violation

--- a/tasks/docker/stop.yml
+++ b/tasks/docker/stop.yml
@@ -10,5 +10,6 @@
       JAVA_OPTS: "{{ jenkins_java_opts }}"
     state: stopped
 
-- wait_for:
+- name: Wait for container to stop
+  wait_for:
     timeout: 5
