Make tasks idempotent
This fixes an ansible-lint warning as well as a test failure in
molecule. In some cases, the warning has just been suppressed with a
noqa comment -- in the future, we should fix these tasks and make them
actually idempotent (if possible).

--- a/tasks/apt/install.yml
+++ b/tasks/apt/install.yml
@@ -44,8 +44,9 @@
     state: present
 
 - name: Set default Java version
-  shell: /usr/sbin/update-java-alternatives -s "{{ jenkins_java_version }}"
+  shell: /usr/sbin/update-java-alternatives -s "{{ jenkins_java_version }}"  # noqa 305
   ignore_errors: true
+  changed_when: false
 
 - name: Add Jenkins key
   apt_key:
